--- a/connect4.css
+++ b/connect4.css
@@ -1,4 +1,20 @@
 /* game board table */
+body {
+  background-color: #f9fafb;
+  font-family: "Open Sans", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+}
+
+#game {
+  width: 500px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
 
 #board td {
   align-items: center;
